--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"capture": {
-		"url": "http://bj.leju.com",
+		"url": "http://shanxi.esf.leju.com/house/o%E5%AE%9E%E5%9C%B0/?zt_ad_preview=ESFPC-014|119750,ESFPC-015|119749,ESFPC-016|119748",
 		"output": "./output/leju.png",
 		"viewportWidth": 1400
 	}
