--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"capture": {
-		"url": "http://shanxi.esf.leju.com/?zt_ad_preview=ESFPC-001|119763,ESFPC-002|119762,ESFPC-003|119761,ESFPC-004|119760,ESFPC-005|119759,ESFPC-006|119758,ESFPC-007|119757,ESFPC-008|119756,ESFPC-009|119755,ESFPC-010|119754,ESFPC-031|119726,ESFPC-032|119725,ESFPC-033|119724,ESFPC-034|119723,ESFPC-035|119722,ESFPC-036|119721,ESFPC-037|119720,ESFPC-038|119719",
+		"url": "http://bj.esf.leju.com/info/368/?zt_ad_preview=ESFPC-017|119747,ESFPC-018|119746,ESFPC-019|119745,ESFPC-020|119744,ESFPC-021|119743,ESFPC-022|119742",
 		"output": "./output/bj.png",
 		"viewportWidth": 1400
 	}
